kube-mutation-webhook-pod-injector-nginx/deploy/nginx-injector-pod-webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-injector-pod-webhook-deployment
  namespace: nginx-injector-pod-webhook
  labels:
    app: nginx-injector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-injector
  template:
    metadata:
      labels:
        app: nginx-injector
    spec:
      containers:
        - name: nginx-injector
          image: docker.io/littlebull/nginx-injector-pod-webhook-server:v0.0.1
          imagePullPolicy: IfNotPresent
          args:
          - -port=8443
          - -sidecarCfgFile=/etc/webhook/config/sidecarconfig.yaml
          - -tlsCertFile=/etc/webhook/certs/cert.pem
          - -tlsKeyFile=/etc/webhook/certs/key.pem
          - -alsologtostderr
          - -v=4
          - 2>&1
          volumeMounts:
          - name: webhook-certs
            mountPath: /etc/webhook/certs
            readOnly: true
          - name: webhook-config
            mountPath: /etc/webhook/config
      volumes:
      - name: webhook-certs
        secret:
          secretName: nginx-injector-pod-webhook-certs
      - name: webhook-config
        configMap:
          name: nginx-injector-pod-webhook-sidecar-configmap
