kube-mutation-webhook-pod-injector-nginx/deploy/nginx-injector-pod-webhook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-injector-pod-webhook-svc
  namespace: nginx-injector-pod-webhook
  labels:
    app: nginx-injector
spec:
  ports:
  - port: 8443
    targetPort: 8443
  selector:
    app: nginx-injector
