kube-mutation-webhook-pod-injector-nginx/deploy/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: nginx-injector-pod-control
  labels:
    app: nginx-injector
webhooks:
- name: nginx-injector-pod-webhook.calmwu.org
  failurePolicy: Fail # Fail定义了如何处理 admission webhook 中无法识别的错误和超时错误。允许的值为Ignore或Fail，
                      # Ignore表示调用 webhook 的错误将被忽略并且允许 API 请求继续。
                      # Fail表示调用 webhook 的错误导致准入失败并且 API 请求被拒绝。
  clientConfig:
    service:
      name: nginx-injector-pod-webhook-svc
      namespace: nginx-injector-pod-webhook
      path: "/inject"
      port: 8443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR4RENDQXF5Z0F3SUJBZ0lVTUorUkdDSkliSFhRSUg4OTdNaHlBa3JINFZBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2FERUxNQWtHQTFVRUJoTUNWVk14RHpBTkJnTlZCQWdUQms5eVpXZHZiakVSTUE4R0ExVUVCeE1JVUc5eQpkR3hoYm1ReEV6QVJCZ05WQkFvVENrdDFZbVZ5Ym1WMFpYTXhDekFKQmdOVkJBc1RBa05CTVJNd0VRWURWUVFECkV3cExkV0psY201bGRHVnpNQjRYRFRJeE1EVXhNVEUzTURVd01Gb1hEVEkyTURVeE1ERTNNRFV3TUZvd2FERUwKTUFrR0ExVUVCaE1DVlZNeER6QU5CZ05WQkFnVEJrOXlaV2R2YmpFUk1BOEdBMVVFQnhNSVVHOXlkR3hoYm1ReApFekFSQmdOVkJBb1 [...]
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""] # 列出了一个或多个要匹配的 API 组。"" 是核心 API 组。"*" 匹配所有 API 组。
    apiVersions: ["v1"] # 列出了一个或多个要匹配的 API 版本。"*" 匹配所有 API 版本。
    resources: ["pods"]
  admissionReviewVersions: ["v1", "v1beta1"] # 字段指定可接受的 AdmissionReview 对象版本：
  namespaceSelector:
    matchLabels:
      nginx-injection: "enabled" # 名字空间具有值为 "enabled" 的 "nginx-injection" 标签
  #objectSelector:
  #  matchLabels:
  #    nginx-injection: "true" # 它将匹配带有标签 nginx-injection:true 的pod
